--- a/css/full-slider.css
+++ b/css/full-slider.css
@@ -18,7 +18,7 @@
 
 .vertical-align {
     display: flex;
-    display: -ms-flexbox; // IE10 support
+    display: -ms-flexbox; 
     align-items: center;
 }
 
@@ -34,7 +34,7 @@
 header.masthead {
   text-align: right;
   color: white;
-  background-image: url("../images/Capture.png");
+  background-image: url("../images/back.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -43,23 +43,78 @@ header.masthead {
 
 header.masthead .intro-text {
   padding-top: 270px;
-  padding-bottom: 300px;
+  padding-bottom: 200px;
 }
 
 header.masthead .intro-text .intro-lead-in {
-  font-size: 22px;
+  font-size: 20px;
   /*font-style: italic;*/
   line-height: 22px;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 header.masthead .intro-text .intro-heading {
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 700;
   line-height: 50px;
   margin-bottom: 25px;
   /*font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';*/
+}
+
+
+@media (min-width: 1200px) {
+  .container{
+	width:100%;
+	padding-right:15px;
+	padding-left:15px;
+	margin-right:auto;
+	margin-left:auto;
+  }
+  header.masthead .intro-text {
+    padding-top: 320px;
+    padding-bottom: 350px;
+  }
+  header.masthead .intro-text .intro-lead-in {
+    font-size: 35px;
+    line-height: 40px;
+    margin-bottom: 25px;
+    font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+  header.masthead .intro-text .intro-heading {
+    font-size: 65px;
+    font-weight: 700;
+    line-height: 55px;
+    margin-bottom: 50px;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+}
+
+@media (min-width: 992px) {
+  .container{
+	width:100%;
+	padding-right:15px;
+	padding-left:15px;
+	margin-right:auto;
+	margin-left:auto;
+  }
+  header.masthead .intro-text {
+    padding-top: 320px;
+    padding-bottom: 350px;
+  }
+  header.masthead .intro-text .intro-lead-in {
+    font-size: 35px;
+    line-height: 40px;
+    margin-bottom: 25px;
+    font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+  header.masthead .intro-text .intro-heading {
+    font-size: 65px;
+    font-weight: 700;
+    line-height: 55px;
+    margin-bottom: 50px;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
 }
 
 @media (min-width: 768px) {
@@ -74,13 +129,30 @@ header.masthead .intro-text .intro-heading {
     font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
   header.masthead .intro-text .intro-heading {
-    font-size: 70px;
+    font-size: 55px;
     font-weight: 700;
     line-height: 55px;
     margin-bottom: 50px;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
 }
+
+@media (min-width: 576px) {
+  .container{
+	width:90%;
+  }
+
+  .experience-header{
+	font-size: 15px;
+	font-weight: 500;
+	line-height: 25px;
+	margin-bottom: 25px;
+  }
+}
+
+
+
+
 
 #myImg {
   cursor: pointer;
@@ -208,7 +280,7 @@ margin-bottom:0;
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(70, 130, 180, 0.8);
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
@@ -257,4 +329,48 @@ margin-bottom:0;
 
 #portfolio * {
   z-index: 2;
+}
+
+
+/* Add fade-in amination */
+.animated {
+background-repeat: no-repeat;
+background-position: right top;
+padding-top:25px;
+margin-bottom:20px;
+-webkit-animation-duration: 3s;
+animation-duration: 3s;
+-webkit-animation-fill-mode: both;
+animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeInRight {
+	0% {
+	   opacity: 0;
+	   -webkit-transform: translateX(20px);
+	}
+	100% {
+	   opacity: 1;
+	   -webkit-transform: translateX(0);
+	}
+	}
+
+	@keyframes fadeInRight {
+	0% {
+	   opacity: 0;
+	   transform: translateX(20px);
+	}
+	100% {
+	   opacity: 1;
+	   transform: translateX(0);
+	}
+}
+
+.fadeInRight {
+-webkit-animation-name: fadeInRight;
+animation-name: fadeInRight;
+}
+
+.hideme {
+    opacity:0;
 }
