Update personal website

--- a/css/full-slider.css
+++ b/css/full-slider.css
@@ -84,7 +84,6 @@ video{
   min-width: 100%;
 }
 
-/** Need to change here!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! **/
 .h1,h1 {
 	font-size:2.5rem;
   }
@@ -98,7 +97,13 @@ video{
 	font-size:1.5rem;
   }
 
-
+.image1{
+    display: block;
+ }
+.image2{
+    display: none;
+ }
+ 
 @media (max-width: 1200px) {
   .container{
 	width:100%;
@@ -222,35 +227,115 @@ video{
   .h4,h4 {
 	font-size:1.15rem;
   }
+  .image1{
+    display: none;
+  }
+  .image2{
+    display: block;
+  }
+
   .container{
 	width:90%;
   }
   .experience-header{
 	font-size: 15px;
 	font-weight: 500;
-	line-height: 25px;
+	line-height: 35px;
 	margin-bottom: 25px;
+  }
+
+  .video_contain {
+    position: relative;
+    /** could be any size **/
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 0;
+    padding-right: 5%;
+    padding-left: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
   }
   
   header.masthead .intro-text {
-    padding-top: 250px;
-    padding-bottom: 280px;
+    padding-top: 230px;
+    padding-bottom: 220px;
   }
   header.masthead .intro-text .intro-lead-in {
-    font-size: 25px;
+    font-size: 22px;
     line-height: 40px;
     margin-bottom: 25px;
     font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
   header.masthead .intro-text .intro-heading {
-    font-size: 45px;
-    font-weight: 700;
+    font-size: 38px;
+    font-weight: 600;
     line-height: 55px;
     margin-bottom: 50px;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
 }
 
+@media (max-width: 320px) {
+  .h1,h1 {
+	font-size:1.7rem;
+  }
+  .h2,h2 {
+	font-size:1.6rem;
+  }
+  .h3,h3 {
+	font-size:1.3rem;
+  }
+  .h4,h4 {
+	font-size:1.1rem;
+  }
+  .image1{
+    display: none;
+  }
+  .image2{
+    display: block;
+  }
+
+  .container{
+	width:90%;
+  }
+  .experience-header{
+	font-size: 15px;
+	font-weight: 600;
+	line-height: 35px;
+	margin-bottom: 25px;
+  }
+  .video_contain {
+    position: relative;
+    /** could be any size **/
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 0;
+    padding-right: 5%;
+    padding-left: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+  
+  header.masthead .intro-text {
+    padding-top: 210px;
+    padding-bottom: 200px;
+  }
+  header.masthead .intro-text .intro-lead-in {
+    font-size: 20px;
+    line-height: 40px;
+    margin-bottom: 25px;
+    font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+  header.masthead .intro-text .intro-heading {
+    font-size: 34px;
+    font-weight: 600;
+    line-height: 55px;
+    margin-bottom: 50px;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+}
 
 
 
